--- a/css/style.css
+++ b/css/style.css
@@ -1209,3 +1209,6 @@ img{
 	margin-bottom: 20px;
 }
 /*-- End of Contact Page Stylesheet --*/
+#contact input.has-error {
+	background-color: rgba(100,0,0,0.5);
+}
