--- a/css/style.css
+++ b/css/style.css
@@ -1209,6 +1209,7 @@ img{
 	margin-bottom: 20px;
 }
 /*-- End of Contact Page Stylesheet --*/
-#contact input.has-error {
-	background-color: rgba(100,0,0,0.5);
+/* Estilos propios */
+#contact input.has-error{
+	background-color:rgba(100,0,0,0.5);
 }
